--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,6 +15,17 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     steps:
+      - name: Install node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - run: |
+          sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          sudo apt-get update
+          sudo apt-get install -y python2 python3 libkrb5-dev gcc openssl libssh2-1-dev g++ make libpcre libpcreposix libkrb5 libk5crypto libcom_err 
+          sudo apt-get install libstdc++-4.9-dev
+          sudo apt-get install libssl-dev
+          npm install nodegit
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Restore build and deps cache
