--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,9 @@ jobs:
         with:
           node-version: 16
       - run: |
+          sudo apt-get install build-essential
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
+          sudo apt-get install gcc-4.9 g++-4.9 cpp-4.9
           sudo apt-get update -y
           sudo apt-get install -y python2 python3 libkrb5-dev gcc openssl libssh2-1-dev g++ make libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2 
           sudo apt-get install libstdc++-4.9-dev
