--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,10 +22,15 @@ jobs:
       - run: |
           sudo apt-get install build-essential
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
-          sudo apt-get install gcc-4.9 g++-4.9 cpp-4.9
           sudo apt-get update -y
+          sudo apt-get install gcc-4.9
+          update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 40 --slave /usr/bin/gcc gcc /usr/bin/gcc-4.9
+          update-alternatives --config gcc
+          update-alternatives --install /usr/bin/cpp cpp /usr/bin/cpp-4.9 40 --slave /usr/bin/cpp cpp /usr/bin/cpp-4.9
+          update-alternatives --config cpp
+          update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
+          update-alternatives --config g++
           sudo apt-get install -y python2 python3 libkrb5-dev gcc openssl libssh2-1-dev g++ make libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2 
-          sudo apt-get install libstdc++-4.9-dev
           sudo apt-get install libssl-dev
           npm install nodegit
       - name: Checkout source
