--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,16 +20,13 @@ jobs:
         with:
           node-version: 16
       - run: |
-          sudo apt-get install build-essential
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update -y
           sudo apt-get install gcc-4.9
           sudo update-alternatives --remove-all gcc
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.9 20
           sudo update-alternatives --config gcc
-          sudo sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 40 --slave /usr/bin/g++ g++ /usr/bin/g++-4.9
-          sudo update-alternatives --config g++
-          sudo apt-get install -y python2 python3 libkrb5-dev gcc openssl libssh2-1-dev g++ make libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2 
+          sudo apt-get install -y build-essential python2 python3 libkrb5-dev gcc openssl libssh2-1-dev g++ make libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2 
           sudo apt-get install libssl-dev
           npm install nodegit
       - name: Checkout source
