--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,8 +22,7 @@ jobs:
       - run: |
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update -y
-          sudo apt-get install gcc-4.9
-          sudo apt-get install -y build-essential 
+          sudo apt-get install -y gcc-4.9 libssl-dev
           npm install nodegit
       - name: Checkout source
         uses: actions/checkout@v3
