--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,7 @@ jobs:
       - run: |
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update -y
-          sudo apt-get install -y gcc-4.9 libssl-dev
+          sudo apt-get install -y gcc-4.9 libssl-dev libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2
           npm install nodegit
       - name: Checkout source
         uses: actions/checkout@v3
