--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,11 @@ jobs:
         with:
           node-version: 16
       - run: |
-          sudo sed -i 's/yes/no/g' /etc/initramfs-tools/update-initramfs.conf
-          sudo rm -f /var/lib/man-db/auto-update
           sudo add-apt-repository ppa:ubuntu-toolchain-r/test
           sudo apt-get update -y
           sudo apt-get install -y gcc-4.9 libssl-dev libpcre3-dev libpcre3 libkrb5-dev libk5crypto3 libcomerr2
-          npm install nodegit
+      - name: Install nodegit
+        run: npm install nodegit
       - name: Checkout source
         uses: actions/checkout@v3
       - name: Restore build and deps cache
